# xentara-simple-sample-driver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cpp.hint
config/: model.json
src/: Attributes.cpp  Attributes.hpp  CustomError.cpp  CustomError.hpp  Device.cpp  Device.hpp  Driver.cpp  Driver.hpp  Events.cpp  Events.hpp  Input.cpp  Input.hpp  Output.cpp  Output.hpp  Plugin.cpp  Plugin.hpp  Skill.cpp  Skill.hpp  Tasks.cpp  Tasks.hpp
